2017-04-18  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170418
	  Merge with NetBSD make, pick up
	  o main.c: fix Main_SetObjdir() for relative paths (eg obj).

2017-04-17  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170417
	  Merge with NetBSD make, pick up
	  o fixes a number of coverity complaints
	    - check return value of fseek, fcntl
	    - plug memory leak in Dir_FindFile, Var_LoopExpand,
	      JobPrintCommand, ParseTraditionalInclude
	    - use bmake_malloc() where NULL is not tollerated
	    - use MAKE_ATTR_UNUSED rather that kludges like 
	      return(unused ? 0 : 0)
	    - use purge_cached_realpaths() rather than abuse cached_realpath()

2017-04-13  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170413
	  Merge with NetBSD make, pick up
	  o main.c: when setting .OBJDIR ignore '$' in paths.

	* job.c: use MALLOC_OPTIONS to set malloc_options.

2017-04-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170411
	  Merge with NetBSD make, pick up
	  o str.c: Str_Match: allow [^a-z] to behave as expected.

2017-03-26  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170326
	  Merge with NetBSD make, pick up
	  o main.c: purge relative paths from realpath cache when .OBJDIR
	    is changed.

2017-03-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170311
	  Merge with NetBSD make, pick up
          o main.c: only use -C arg "as is" if it starts with '/'.

2017-03-01  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170301
	  Merge with NetBSD make, pick up
	  o main.c: use -C arg "as is" rather than getcwd()
	    if they identify the same directory.
	  o parse.c: ensure loadfile buffer is \n terminated in non-mmap case

2017-02-01  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170201
	  Merge with NetBSD make, pick up